--- a/templates/layout.html
+++ b/templates/layout.html
@@ -47,7 +47,7 @@
                         <a href="/index.html">Home</a>
                     </li>
                     <li>
-                        <a href="/about/">About</a>
+                        <a href="/blog/">Blog</a>
                     </li>
                 </ul>
             </div>
