blog functionality mostly working

--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -13,5 +13,8 @@
                     </a>
                     <p class="post-meta">Posted by {{post.author}} on {{post.pub_date}}</p>
                 </div>
+            </div>
+        </div>
+    </div>
 
 {% endmacro %}
