--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -3,18 +3,28 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
                 <div class="post-preview">
-                    <a href="post.html">
-                        <h2 class="post-title">
-                            {{post.title}}
-                        </h2>
-                        <h3 class="post-subtitle">
-                            {{post.subtitle}}
-                        </h3>
-                    </a>
-                    <p class="post-meta">Posted by {{post.author}} on {{post.pub_date}}</p>
+                        {% if from_index %}
+                            <a href="{{ post|url }}">
+                            <h2 class="post-title">
+                                {{ post.title }}
+                            </h2>
+                            <h3 class="post-subtitle">
+                                {{ post.subtitle }}
+                            </h3>
+                            </a>
+                            {% else %}
+                            <a href="#">
+                            <h2 class="post-title">
+                                {{ post.title }}
+                            </h2>
+                            <h3 class="post-subtitle">
+                                {{ post.subtitle }}
+                            </h3>
+                            </a>
+                        {% endif %}
+                    <p class="post-meta">Posted by {{ post.author }} on {{ post.pub_date }}</p>
                 </div>
             </div>
         </div>
     </div>
-
 {% endmacro %}
