--- a/templates/macros/blog.html
+++ b/templates/macros/blog.html
@@ -15,6 +15,7 @@
                                 <p class="post-meta">Posted by {{ post.author }} on {{ post.pub_date }}</p>
                             {% else %}
                             {{ post.body }}
+                            <div class="comments">{{ render_disqus_comments() }}</div>
                         {% endif %}
                 </div>
             </div>
