--- a/templates/macros/pagination.html
+++ b/templates/macros/pagination.html
@@ -1,15 +1,19 @@
 {% macro render_pagination(pagination) %}
-  <div class="pagination">
     {% if pagination.has_prev %}
-      <a href="{{ pagination.prev|url }}">&laquo; Previous</a>
-    {% else %}
-      <span class="disabled">&laquo; Previous</span>
+        <!-- Pager -->
+            <ul class="pager">
+                <li class="previous">
+                    <a href="{{ pagination.prev|url }}">&larr; Newer Posts</a>
+                </li>
+            </ul>
     {% endif %}
-    | {{ pagination.page }} |
+    <!--| {{ pagination.page }} | -->
     {% if pagination.has_next %}
-      <a href="{{ pagination.next|url }}">Next &raquo;</a>
-    {% else %}
-      <span class="disabled">Next &raquo;</span>
+        <!-- Pager -->
+            <ul class="pager">
+                <li class="next">
+                    <a href="{{ pagination.next|url }}">Older Posts &rarr;</a>
+                </li>
+            </ul>
     {% endif %}
-  </div>
 {% endmacro %}
