--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,7 @@
     <title>{% block title %} {% endblock %}</title>
 
     <!-- Bootstrap Core CSS -->
-    <link href="{{ '/static/vendor/bootstrap/css/bootstrap.css'|url }}" rel="stylesheet">
+    <link href="{{ '/static/vendor/bootstrap/css/bootstrap.min.css'|url }}" rel="stylesheet">
 
     <!-- Theme CSS -->
     <link href="{{ '/static/css/clean-blog.min.css'|url }}" rel="stylesheet">
