--- a/templates/layout.html
+++ b/templates/layout.html
@@ -49,6 +49,9 @@
                     <li>
                         <a href="/blog/">Blog</a>
                     </li>
+                    <li>
+                        <a href="/galler/">Gallery</a>
+                    </li>
                 </ul>
             </div>
         </div>
