--- a/templates/layout.html
+++ b/templates/layout.html
@@ -50,7 +50,7 @@
                         <a href="/blog/">Blog</a>
                     </li>
                     <li>
-                        <a href="/galler/">Gallery</a>
+                        <a href="/gallery/">Gallery</a>
                     </li>
                 </ul>
             </div>
